{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "30914f5a-79f1-46b0-ae97-7fbeb5c0d466",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "33a20496-c221-4753-8a57-8d26383e576f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Containers1",
                    "type": "Button",
                    "id": "4cc142f5-b81a-4771-b506-691192479ea3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Containers2",
                    "type": "Button",
                    "id": "61da57ee-2c1b-4064-87b0-aa118f8599e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Containers3",
                    "type": "Button",
                    "id": "5b3433a2-9102-43b4-a66f-8ad0f6393e43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Containers4",
                    "type": "Button",
                    "id": "461c5cce-1fb2-40a4-bb24-80ba119c8bad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UserPowerUp",
                    "type": "Button",
                    "id": "1cd64d91-1ec2-4f3a-80ff-97d425abfbb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "d1f13dae-a316-4ec4-8c36-c66b8e1aeef3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f133263d-d016-4234-9a7a-a868b1cdfb52",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7afddc7e-2b6f-431d-a099-eb614262cc86",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e1c8effe-e901-4a65-9f9f-288e65016470",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "794f3689-caf6-4aea-8bce-b0672b03d91c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b412381a-988c-4d19-a4cd-90536920840f",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Containers1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35d746d5-e71c-429e-91b4-0aed807adf4f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Containers2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dae7d813-315d-4d35-ba37-86cf6046a9f9",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Containers3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19dda65b-17c5-4997-a301-726168136340",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Containers4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2557e46-f001-434b-974f-0fc1b396e6a3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "UserPowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}